Fix scrollReveal animation on mobile devices (put all from bottom to top)

--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -28,6 +28,10 @@ a:hover {
   font-size: $big-font-size;
   font-weight: bold;
   text-transform: uppercase;
+
+  @include respond(phone) {
+    font-size: 2.8rem;
+  }
 }
 
 .dark-blue-text {
